# show-me-the-loot-tables

./: Cargo.toml  README.org
src/: lib.rs  main.rs
