[package]
name = "show-me-the-loot-tables"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
tokio  = {version="1",features=["full"]}
serde_json = "1.0"
base64 = "0.13.0"
ron = "*"
serde= "*"
